testsuite/tests/typecheck/should_fail/T3966.hs
{-# OPTIONS_GHC -Werror -O #-}
-- Add -O so the UNPACK has some effect

module T3966 where

data Foo a b = Foo {-# UNPACK #-} !(a -> b)
